Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,9 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+  imageName: 'pipelines-javascript-docker'
+
 steps:
 - task: Maven@3
   inputs:
@@ -20,3 +23,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: Docker@2
+  inputs:
+    command: 'buildAndPush'
+    Dockerfile: 'app/Dockerfile'
+
+ 
